# lol_scrapers

./: LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg
src/lol_scrapers/: __init__.py  components.py  items.py  lolchess.py  name.py  opgg.py  runes.py  stats.py
src/lol_scrapers/lolchess/: __init__.py  icon.py  names.py  tft_meta_trends.py  trait.py  traits.py
src/lol_scrapers/opgg/: __init__.py  champion.py  items.py  name.py  runes.py  stats.py
src/lol_scrapers/request/: __init__.py  abc.py
src/lol_scrapers/request/strategies/: champion.py  synergies.py  tft_items.py  tft_meta_trends.py
src/lol_scrapers/utils/: __init__.py  processor.py
src/lol_scrapers/utils/abc/: __init__.py  lol_req.py  scraper_strategy.py
src/lol_scrapers/utils/dataclasses/: __init__.py  champion.py  icon.py  item.py  meta.py  meta_comp.py  runes.py  trait.py  trait_names.py  traits.py
tests/: conftest.py  test_lol_scraper.py
