[metadata]
name = lol_scrapers
description = scrapes data from lolchess and opgg
author = Jakub Melzacki
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages =
    lol_scrapers
    lol_scrapers.lolchess
    lol_scrapers.opgg
    lol_scrapers.utils
    lol_scrapers.utils.abc
    lol_scrapers.utils.dataclasses

install_requires =
    requests-html>=0.10.0
    Unidecode>=1.3.2
python_requires = >=3.6
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
lol_scrapers = py.typed

[flake8]
max-line-length = 160